fix flex-box display on safari

--- a/shopee/assets/css/responsive.css
+++ b/shopee/assets/css/responsive.css
@@ -102,6 +102,9 @@
 
    .header__mobile {
       display: flex;
+      display: -webkit-flex;
+      display: flex;
+      display: flex;
       align-items: center;
    }
 
